--- a/pay/src/main/resources/templates/index.html
+++ b/pay/src/main/resources/templates/index.html
@@ -35,13 +35,16 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Transfer</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="/users">Contacts</a>
+                    <a class="nav-link disabled" href="/users">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="/users">Log off</a>
                 </li>
             </ul>
         </div>
