--- a/pay/src/main/resources/templates/user.html
+++ b/pay/src/main/resources/templates/user.html
@@ -24,31 +24,43 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-        <a class="navbar-brand" href="#">PyMyBuddy</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+<nav class="navbar navbar-dark navbar-expand" style="background-color: #e9ecef">
+    <div class="container">
+        <div class="navbar-brand bg-success" style="padding: 10px; border-radius: 5px">
+            PayMyBuddy
+        </div>
+
+        <div class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item ">
+                    <a class="nav-link" style="color: black;font-size: larger;" th:href="@{/homepage}">
+                        Home
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Transfer</a>
+                    <a class="nav-link" style="color: black;font-size: larger;" th:href="@{/transfer}">
+                        Transfer
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
+                    <a  class="nav-link " style="color: black;font-size:larger;" th:href="@{/profile}">
+                        Profile
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="/users">Contact</a>
+                    <a class="nav-link "  style="color: black;font-size: larger;" href="mailto:admin@paymybuddy.com">
+                        Contact
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="/users">Log off</a>
+                    <a sec.authorize="isAuthenticated()" class="nav-link" style="color: black; font-size: larger;" th:href="@{/login}">
+                        Log off
+                    </a>
                 </li>
             </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
 
     <div class="container special" style=" padding-top: 50px;">
@@ -66,9 +78,9 @@
         </div>
 
         <div class="table-responsive">
-            <table class="table table-bordered table-striped table-sm">
-                <thead class="thead-dark">
-                <tr>
+            <table class="table table-striped text-center table-sm" style="border: 2px solid #343A40!important;">
+                <thead style="background-color: #28A745; ">
+                <tr style="color: white; line-height: 60px; min-height: 60px; height: 60px;">
                     <th>ID</th>
                     <th>Prénom</th>
                     <th>Nom</th>
