--- a/pay/src/main/resources/templates/user.html
+++ b/pay/src/main/resources/templates/user.html
@@ -48,7 +48,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link "  style="color: black;font-size: larger;" href="mailto:admin@paymybuddy.com">
+                    <a class="nav-link "  style="color: black;font-size: larger;" th:href="@{/users}">
                         Contact
                     </a>
                 </li>
