--- a/pay/src/main/resources/templates/login.html
+++ b/pay/src/main/resources/templates/login.html
@@ -6,12 +6,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
     <!--<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">-->
-    <link
-            crossorigin="anonymous"
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-            rel="stylesheet"
-    >
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 
     <title>PayMyBuddy login</title>
 
