--- a/pay/src/main/resources/templates/login.html
+++ b/pay/src/main/resources/templates/login.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
-    <!--<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">-->
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+    <link
+            crossorigin="anonymous"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+            rel="stylesheet"
+    >
 
     <title>PayMyBuddy login</title>
 
@@ -49,6 +53,12 @@
                     </label>
                 </div>
                 <button class="w-100 btn btn-lg btn-primary" type="submit" style="margin-bottom: 10px">Login</button>
+
+                <!--<div class="form-floating">
+                    <input type="submit" name="login-submit" class="form-control" id="login-submit"
+                           placeholder="Password" value="Login" />
+                </div>-->
+
                 <a th:href="@{/registration}">Registration</a>
 
             </form>
