--- a/pay/src/main/resources/templates/homepage.html
+++ b/pay/src/main/resources/templates/homepage.html
@@ -23,7 +23,7 @@
         <div class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
             <ul class="navbar-nav">
 
-                <li class="nav-item ">
+                <li class="nav-item">
                     <a class="nav-link" style="color: black;font-size: larger;" th:href="@{/homepage}">
                         Home
                     </a>
@@ -49,10 +49,14 @@
 
                 <li class="nav-item">
                     <a sec.authorize="isAuthenticated()" class="nav-link" style="color: black; font-size: larger;" th:href="@{/login}">
-                        Log off
+                        Logout
                     </a>
                 </li>
             </ul>
+        </div>
+        <div style="padding: 10px; border-radius: 5px">
+            <span  th:text="${firstName}"></span>
+            <span  th:text="${lastName}"></span>
         </div>
     </div>
 </nav>
@@ -62,14 +66,14 @@
 
 <div class="container h-100">
     <!-- Welcome + firstname User-->
-    <h1 class="text-dark" style="margin-top: 30px;">Welcome
-        <span  th:text="${user}"></span>
+    <h1 class="text-secondary" style="margin-top: 30px;">Welcome to PayMyBuddy
+        <span  th:text="${firstName}" style="color: #343A40"></span>
     </h1>
     <!-- Section Balance -->
     <div class="h-100" >
-        <h2 class="text-dark"> Balance:
-            <span class="text-secondary" th:text="${balance}"></span>
-            <span class="text-dark">€</span>
+        <h2 class="text-black"> Balance:
+            <span class="text-danger" th:text="${balance}"></span>
+            <span class="text-black">€</span>
         </h2>
     </div>
     <br>
