--- a/pay/src/main/resources/templates/profile.html
+++ b/pay/src/main/resources/templates/profile.html
@@ -43,30 +43,36 @@
                 </li>
                 <li class="nav-item">
                     <a sec.authorize="isAuthenticated()" class="nav-link" style="color: black; font-size: larger;"
-                       th:href="@{/login}">Log off
+                       th:href="@{/login}">Logout
                     </a>
                 </li>
             </ul>
         </div>
+        <div style="padding: 10px; border-radius: 5px">
+            <span  th:text="${firstName}"></span>
+            <span  th:text="${lastName}"></span>
+        </div>
     </div>
 </nav>
 <div class="container h-100">
-    <h1 class="text-success fw-light">My Profile</h1>
-    <hr class="text-light">
+
 
     <!-- select Iban Account -->
     <div class="col">
-        <h3 class="text-success fw-light mb-4">My Account Bank</h3>
+        <h3 class="text-dark fw-light mb-4" style="margin-top: 20px">Your Bank Account
+            <span  th:text="${firstName}"></span>
+        </h3>
+
         <div class="row justify-content-center">
-            <div class="col-10">
+            <div class="col-12">
                 <a th:href="@{/accounts/addAccount}"
                    class="text-white btn btn-primary btn-sm mb-3 ml-3 btn-lg">Add Iban Account
                 </a>
-                <table class="table table-light table-bordered table-striped table-hover text-center table-sm">
-                    <thead class="table-secondary">
-                    <tr>
-                        <th class="text-center text-success col-md-5">Iban</th>
-                        <th class="text-center text-success col-md-2">Action</th>
+                <table class="table table-striped text-center table-sm " style="border: 2px solid #343A40!important;">
+                    <thead style="background-color: #28A745; ">
+                    <tr style="color: white; line-height: 60px; min-height: 60px; height: 60px;">
+                        <th class="text-center col-md-5">Iban</th>
+                        <th class="text-center col-md-2">Action</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -83,12 +89,12 @@
             </div>
         </div>
     </div>
-    <hr class="text-light">
+
 
 
     <!--  transfer account to application -->
     <div class="col-12">
-        <h3 class="text-success fw-light mb-4">Transfer to balance</h3>
+        <h3 class="text-dark fw-light mb-4">Transfer to balance</h3>
         <div align="center">
             <form action="#"  method="get"
                   th:action="@{/movement/transferToApplication}">
@@ -118,7 +124,7 @@
     <br>
     <!--Selector transfer from application to account -->
     <div class="col">
-        <h3 class="text-success fw-light mb-4">Transfer to account</h3>
+        <h3 class="text-dark fw-light mb-4">Transfer to account</h3>
         <div align="center">
             <form action="#" method="get"
                   th:action="@{/movement/transferToAccountBank}"
@@ -146,23 +152,19 @@
         </div>
     </div>
     <br>
-    <!--     Alert message-->
-    <!--    <p class="alert alert-danger text-center" th:if="${error}" th:text="${error}"></p>-->
 
-
-    <hr class="text-white">
     <!-- Contact List Action -->
     <div class="col">
-        <h3 class="text-success fw-light my-4">Contact list</h3>
+        <h3 class="text-dark fw-light my-4">Contacts list</h3>
     </div>
-    <hr class="text-white">
+
     <div class="row justify-content-center">
-        <div class="col-10">
-            <table class="table table-light table-bordered table-striped table-hover text-center table-sm">
-                <thead class="table-secondary">
-                <tr>
-                    <th class="text-center text-success col-md-8">Contact Name</th>
-                    <th class="text-center text-success col-md-4">Action</th>
+        <div class="col-12">
+            <table class="table table-striped text-center table-sm " style="border: 2px solid #343A40!important;">
+                <thead style="background-color: #28A745; ">
+                <tr style="color: white; line-height: 60px; min-height: 60px; height: 60px;">
+                    <th class="text-center col-md-8">Contact Name</th>
+                    <th class="text-center col-md-4">Action</th>
                 </tr>
                 </thead>
                 <tbody>
