--- a/pay/src/main/resources/templates/user.html
+++ b/pay/src/main/resources/templates/user.html
@@ -54,10 +54,14 @@
                 </li>
                 <li class="nav-item">
                     <a sec.authorize="isAuthenticated()" class="nav-link" style="color: black; font-size: larger;" th:href="@{/login}">
-                        Log off
+                        Logout
                     </a>
                 </li>
             </ul>
+        </div>
+        <div style="padding: 10px; border-radius: 5px">
+            <span  th:text="${firstName}"></span>
+            <span  th:text="${lastName}"></span>
         </div>
     </div>
 </nav>
@@ -65,7 +69,7 @@
 
     <div class="container special" style=" padding-top: 50px;">
 
-        <h2 class="h2">Liste des utilisateurs</h2>
+        <h2 class="h2">Users list</h2>
 
         <div class="m-2 d-flex justify-content-end">
             <button type="button" class="btn btn-success p-2" >
@@ -85,7 +89,7 @@
                     <th>Prénom</th>
                     <th>Nom</th>
                     <th>Email</th>
-                    <th>Password</th>
+                    <!--<th>Password</th>-->
                     <th>Balance</th>
                     <th>Role</th>
                     <th>Enabled</th>
@@ -104,7 +108,7 @@
                         <td th:text="${user.firstName}"></td>
                         <td th:text="${user.lastName}"></td>
                         <td th:text="${user.email}"></td>
-                        <td th:text="${user.password}"></td>
+                        <!--<td th:text="${user.password}"></td>-->
                         <td th:text="${user.balance}"></td>
                         <td th:text="${user.role}"></td>
                         <td th:text="${user.enabled}"></td>
