--- a/pay/src/main/resources/templates/login.html
+++ b/pay/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-
+    <link rel="icon" href="data:,">
     <link
             crossorigin="anonymous"
             href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
