--- a/pay/src/main/resources/templates/homepage.html
+++ b/pay/src/main/resources/templates/homepage.html
@@ -79,7 +79,7 @@
     <br>
 
 
-    <!-- Table of transaction -->
+    <!-- Table des transactions -->
 
     <div class="row">
         <h4 class=" text-dark " style="margin-left:25px; margin-top: 20px;">My transactions</h4>
