--- a/pay/src/main/resources/templates/transfer.html
+++ b/pay/src/main/resources/templates/transfer.html
@@ -67,7 +67,7 @@
     </div>
     <br>
 
-    <!-- Section Add Contact -->
+    <!-- Section Ajouter un Contact -->
 
     <div align="center">
         <form  method="post" th:action="@{/transfer/saveContact}">
@@ -95,7 +95,7 @@
         </form>
     </div>
 
-    <!--Section Send Money-->
+    <!--Section envoie Argent-->
     <div align="center">
         <div class="row bg-light p-3 m-2">
             <div class="col">
@@ -103,9 +103,9 @@
                     <form class="justify-content-center" action="#" method="get"
                           th:action="@{/transfer/send}">
 
-                        <!--Filling fiel contact transaction -->
+                        <!--Champs transaction -->
                         <div class="row">
-                            <!-- Selector for contact transaction-->
+                            <!-- Select du contact pour la transaction-->
                             <div class="col" style=" top: 5px">
                                 <select class="form-select" th:name="emailContact">
                                     <option selected>Select a Contact
@@ -116,7 +116,7 @@
                                     </option>
                                 </select>
                             </div>
-                            <!-- Selector amount to contact transaction-->
+                            <!-- champ montant transaction-->
                             <div class="col input-group">
                                 <input class="form-control" placeholder="Amount"  th:name="amount"
                                        type="number" step="0.01" >
@@ -156,7 +156,6 @@
                             <th class="text-center">Recipient</th>
                             <th class="text-center">Amount</th>
                             <th class="text-center">Description</th>
-                           <!-- <th class="text-center">Balance</th>-->
                         </tr>
                         </thead>
                         <tbody>
@@ -166,34 +165,11 @@
                             <td th:text="${transaction.getRecipientUser().getFirstName() + ' '+ transaction.getRecipientUser().getLastName()}"></td>
                             <td th:text="${transaction.getAmountTransaction()}+'€'"></td>
                             <td th:text="${transaction.getDescription()}"></td>
-                          <!--<td th:text="${transaction.getBalance()}"></td> -->
                         </tr>
                     </tbody>
 
                 </table>
 
-            <!--    <div th:if = "${totalPages > 1}">
-                    <div class = "row col-sm-10">
-                        <div class = "col-sm-2">
-                            Total Rows: [[${totalItems}]]
-                        </div>
-                        <div class = "col-sm-1">
-					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
-						<a th:if="${currentPage != i}" th:href="@{'/page/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
-						<span th:unless="${currentPage != i}">[[${i}]]</span>  &nbsp; &nbsp;
-					</span>
-                        </div>
-                        <div class = "col-sm-1">
-                            <a th:if="${currentPage < totalPages}"  th:href="@{'/page/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
-                            <span th:unless="${currentPage < totalPages}">Next</span>
-                        </div>
-
-                        <div class="col-sm-1">
-                            <a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
-                            <span th:unless="${currentPage < totalPages}">Last</span>
-                        </div>
-                    </div>
-                </div>-->
 
             </div>
         </div>
